[workspace]
resolver = "2"
members = [
    "yellowstone-grpc-client", # 4.1.0+solana.2.1.9
    "yellowstone-grpc-geyser", # 4.2.2+solana.2.1.9
    "yellowstone-grpc-proto",  # 4.1.1+solana.2.1.9
]
exclude = [
    "yellowstone-grpc-client-nodejs/solana-encoding-wasm", # 3.0.0
]

[workspace.package]
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false

[workspace.dependencies]
affinity = "0.1.2"
agave-geyser-plugin-interface = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
anyhow = "1.0.62"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.3.0"
cargo-lock = "10.0.1"
chrono = "0.4.26"
clap = "4.3.0"
criterion = "0.5.1"
crossbeam-channel = "0.5.8"
env_logger = "0.11.3"
futures = "0.3.24"
git-version = "0.3.5"
hex = "0.4.3"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.17.9"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
log = "0.4.27"
maplit = "1.0.2"
prometheus = "0.13.2"
prost = "0.13.1"
prost-types = "0.13.3"
prost_011 = { package = "prost", version = "0.11.9" }
protobuf-src = "1.1.0"
serde = "1.0.217"
serde_json = "1.0.86"
solana-account-decoder = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
solana-logger = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-sdk = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-storage-proto = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
solana-transaction-status = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
solana-transaction-context = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
spl-token-2022 = "7.0.0"
smallvec = "1.13.2"
thiserror = "1.0.63"
tokio = "1.21.2"
tokio-stream = "0.1.11"
tonic = "0.12.1"
tonic-build = "0.12.1"
tonic-health = "0.12.1"
vergen = "9.0.0"
yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "2.3.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "2.3.0", default-features = false }

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
solana-signature = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-transaction = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-message = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-nonce = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-account-info = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-atomic-u64 = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-bincode = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-clock = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-cpi = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-decode-error = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-define-syscall = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-epoch-schedule = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-fee-calculator = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-hash = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-instruction = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-last-restart-slot = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-msg = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-native-token = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program-entrypoint = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program-error = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program-memory = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program-option = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-program-pack = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-pubkey = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-sanitize = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-sdk-macro = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-serde-varint = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-serialize-utils = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-sha256-hasher = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-short-vec = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-slot-hashes = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-slot-history = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-stable-layout = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-sysvar-id = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-transaction-error = { git = "https://github.com/helius-labs/solana-sdk", branch = "master-2.3" }
solana-zk-sdk = { git = "https://github.com/helius-labs/agave", branch = "master-2.3" }
